<resources>
    <string name="app_name">FatecMobile</string>
    <string name="action_settings">Settings</string>
    <string name="btentrar">Entrar</string>
    <string name="btlistarTodos">Listar Todos</string>
    <string name="btlistarParam">Listar Parametros</string>
    <string name="btpesquisar">Pesquisar</string>
    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovousu">Novo Usuario</string>
    <string name="btsalvar">Salvar</string>
    <string name="lblogin">Login</string>
    <string name="lbsenha">Senha</string>
    <string name="lbtipo">Tipo</string>
    <string name="lbstatus">Status</string>
    <string name="lbid">Id</string>
    <string name="lbusuariologado">UsuLog</string>
    <string name="title_activity_add_usu">AddUsuActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_usu">ListUsuActivity</string>
    <string name="title_activity_upt_usu">UptUsuActivity</string>
    <string name="title_activity_list_usu_param">ListUsuParamActivity</string>
    <string name="controle_de_imovel">Controle de Imovel</string>
    <string name="novo_imovel">Novo Imovel</string>
    <string name="listar_todos">Listar Todos</string>
    <string name="listar_por_proprietario">Listar Por Proprietario</string>
    <string name="textview">TextView</string>
    <string name="controle_de_inquilino">Controle de Inquilino</string>
    <string name="listar_por_nome">Listar por Nome</string>
    <string name="novo_inquilino">Novo Inquilino</string>
    <string name="controle_rela_o_imovel_inquilino">Controle relação Imovel Inquilino</string>
    <string name="listar_por_obs">Listar por Obs</string>
    <string name="nova_rela_o">Nova Relação</string>
    <string name="usuario">Usuario</string>
    <string name="proprietario">Proprietario</string>
    <string name="endereco">Endereco</string>
    <string name="valor_aluguel">Valor Aluguel</string>
    <string name="_0">0</string>
    <string name="nome_proprietario">Nome Proprietario</string>
    <string name="endere_o_do_imovel">Endereço do Imovel</string>
    <string name="nome_inquilino">Nome Inquilino</string>
    <string name="imovel">Imovel</string>
    <string name="inquilino">Inquilino</string>
    <string name="observa_o">Observação</string>
</resources>
